--- a/client/sass/base/_typography.scss
+++ b/client/sass/base/_typography.scss
@@ -35,8 +35,17 @@ body{
 }
 
 .secondary__heading{
-    font-size: 2rem;
+    font-size: 2.7rem;
     font-weight: 600;
     text-align: center;
     color: $color-white;
+    text-decoration: underline;
+    text-decoration-color: $color-accent;
+}
+.paragraph__user{
+    font-size: 2.5rem;
+    color: $color-white;
+    font-weight: 700;
+    text-align: center;
+    text-decoration: underline;
 }
