--- a/client/sass/components/_rules.scss
+++ b/client/sass/components/_rules.scss
@@ -10,6 +10,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    z-index: 10000;
 
 &__box{
     width: 35%;
@@ -21,6 +22,7 @@
     opacity: 0;
     transform: scale(.25);
     transition: all .5s .2s;
+    z-index: 10004;
 }
 
 &__image{
