--- a/client/sass/pages/_playing.scss
+++ b/client/sass/pages/_playing.scss
@@ -15,6 +15,10 @@
         align-items: flex-end;
         width: 50%;
     }
+    &__extra{
+        text-align: right;
+        padding: 0 5rem;
+    }
 }
 
 .score{
