--- a/client/css/style.css
+++ b/client/css/style.css
@@ -216,7 +216,7 @@ body {
   transition: all .2s;
   cursor: pointer; }
   .dashboard__scissors--box:hover, .dashboard__rock--box:hover, .dashboard__paper--box:hover {
-    transform: translateY(-0.6rem); }
+    transform: translateY(-0.4rem); }
 
 .dashboard__scissors--box {
   left: 7rem;
@@ -300,19 +300,29 @@ body {
     outline: none; }
 
 .playing {
-  position: relative; }
+  position: relative;
+  padding: 2rem 0; }
   .playing__box {
     display: flex;
     flex: 1 1;
-    background-color: #74c0ff;
     width: 50%;
-    margin: 2rem auto 0;
-    height: 40rem; }
+    margin: 5rem auto 0;
+    height: 35rem; }
   .playing__user {
-    width: 50%; }
+    width: 50%;
+    position: relative; }
   .playing__house {
-    align-items: flex-end;
-    width: 50%; }
+    width: 50%;
+    position: relative; }
+    .playing__house::after {
+      content: '';
+      height: 14rem;
+      width: 14rem;
+      border-radius: 50%;
+      display: block;
+      margin: 8.7rem auto 0;
+      border: 0.2rem dashed rgba(102, 252, 241, 0.6);
+      background-color: #161d38; }
   .playing__extra {
     text-align: right;
     padding: 0 5rem; }
